--- a/02.03-introtoj.Rmd
+++ b/02.03-introtoj.Rmd
@@ -1,7 +1,7 @@
 # Getting started with jamovi{#introj}
 
->Robots are nice to work with.
->--Roger Zelazny^[Source: *Dismal Light* (1968)]
+|       *Robots are nice to work with.*
+|                               -- Roger Zelazny^[Source: *Dismal Light* (1968)]
 
 In this chapter I'll discuss how to get started in jamovi. I'll briefly talk about how to download and install jamovi, but most of the chapter will be focused on getting you started with finding your way around the jamovi GUI. Our goal in this chapter is not to learn any statistical concepts: we're just trying to learn the basics of how jamovi works and get comfortable interacting with the system. To do this we'll spend a bit of time looking at datasets and variables. In doing so, you'll get a bit of a feel for what it's like to work in jamovi. 
 
@@ -9,7 +9,7 @@ However, before going into any of the specifics, it's worth talking a little abo
 
 - It's sort of obvious but worth saying anyway: doing your statistics on a computer is faster, easier and more powerful than doing statistics by hand. Computers excel at mindless repetitive tasks, and a lot of statistical calculations are both mindless and repetitive. For most people the only reason to ever do statistical calculations with pencil and paper is for learning purposes. In my class I do occasionally suggest doing some calculations that way, but the only real value to it is pedagogical. It does help you to get a "feel" for statistics to do some calculations yourself, so it's worth doing it once. But only once!
 - Doing statistics in a conventional spreadsheet (e.g., Microsoft Excel) is generally a bad idea in the long run. Although many people likely feel more familiar with them, spreadsheets are very limited in terms of what analyses they allow you do. If you get into the habit of trying to do your real life data analysis using spreadsheets then you've dug yourself into a very deep hole.
-- Avoiding proprietary software is a very good idea. There are a lot of commercial packages out there that you can buy, some of which I like and some of which I don't. They're usually very glossy in their appearance and generally very powerful (much more powerful than spreadsheets). However, they're also very expensive. Usually, the company sells "student versions" (crippled versions of the real thing) very cheaply, and then they they sell full powered "educational versions" at a price that makes me wince. They will also sell commercial licences with a staggeringly high price tag. The business model here is to suck you in during your student days and then leave you dependent on their tools when you go out into the real world. It's hard to blame them for trying, but personally I'm not in favour of shelling out thousands of dollars if I can avoid it. And you can avoid it. If you make use of packages like jamovi that are open source and free you never get trapped having to pay exorbitant licensing fees. 
+- Avoiding proprietary software is a very good idea. There are a lot of commercial packages out there that you can buy, some of which I like and some of which I don't. They're usually very glossy in their appearance and generally very powerful (much more powerful than spreadsheets). However, they're also very expensive. Usually, the company sells "student versions" (limited versions of the real thing) very cheaply, and then they they sell full powered "educational versions" at a price that makes me wince. They will also sell commercial licences with a staggeringly high price tag. The business model here is to suck you in during your student days and then leave you dependent on their tools when you go out into the real world. It's hard to blame them for trying, but personally I'm not in favour of shelling out thousands of dollars if I can avoid it. And you can avoid it. If you make use of packages like jamovi that are open source and free you never get trapped having to pay exorbitant licensing fees. 
 - Something that you might not appreciate now, but will love later on if you do anything involving data analysis, is the fact that jamovi is basically a sophisticated front end for the free R statistical programming language. When you download and install R you get all the basic "packages" and those are very powerful on their own. However, because R is so open and so widely used, it's become something of a standard tool in statistics and so lots of people write their own packages that extend the system. And these are freely available too. One of the consequences of this, I've noticed, is that if you look at recent advanced data analysis textbooks then a *lot* of them use R. 
 
 Those are the main reasons I use jamovi. It's not without its flaws, though. It's relatively new^[As of writing this in August 2018.] so there is not a huge set of textbooks and other resources to support it, and it has a few annoying quirks that we're all pretty much stuck with, but on the whole I think the strengths outweigh the weakness; more so than any other option I've encountered so far. 
@@ -27,7 +27,7 @@ One way or another, regardless of what operating system you’re using, it’s t
 jamovi and get started. When first starting jamovi you will be presented with a user interface
 which looks something like Figure \@ref(fig:startingjamovi).
 
-```{r startingjamovi, fig.cap="jamovi looks like this when you start it", echo=FALSE, fig.align="center", out.width="100%"}
+```{r startingjamovi, fig.cap="jamovi looks like this when you start it", echo=FALSE, fig.align="center"}
 
 knitr::include_graphics("img/introj/startingjamovi.png", error = TRUE)
 
@@ -100,7 +100,7 @@ knitr::include_graphics("img/introj/computedvariable.png", error = TRUE)
 ```
 
 *V-functions*
-Several functions are already available in jamovi and available from the drop down box labelled *f~x~*. A number of functions appear in pairs, one prefixed with a V and the other not. V functions perform their calculation on a variable as a whole, where as non-V functions perform their calculation row by row. For example, MEAN(A, B) will produce the mean of A and B for each row. Where as VMEAN(A) gives the mean of all the values in A.
+Several functions are already available in jamovi and available from the drop down box labelled *$f$~x~*. A number of functions appear in pairs, one prefixed with a V and the other not. V functions perform their calculation on a variable as a whole, where as non-V functions perform their calculation row by row. For example, 'MEAN(A, B)' will produce the mean of A and B for each row. Where as 'VMEAN(A)' gives the mean of all the values in A.
 
 ### Copy and Paste{#copypaste}
 jamovi produces nice American Psychological Association (APA) formatted tables and attractive plots. It is often useful to be able to copy and paste these, perhaps into a Word document, or into an email to a colleague. To copy results right click on the object of interest and from the menu select exactly what you want to copy. The menu allows you to choose to copy only the image or the entire analysis. Selecting "copy" copies the content to the clipboard and this can be pasted into other programs in the usual way. You can practice this later on when we do some analyses.
@@ -108,18 +108,18 @@ jamovi produces nice American Psychological Association (APA) formatted tables a
 ### Syntax mode{#syntaxmode}
 jamovi also provides an “R Syntax Mode”. In this mode jamovi produces equivalent R code for each analysis. To change to syntax mode, select the Application menu to the top right of jamovi (a button with three vertical dots) and click the “Syntax mode” checkbox there. You can turn off syntax mode by clicking this a second time.
 
-In syntax mode analyses continue to operate as before but now they produce R syntax, and 'ascii output’ like an R session. Like all results objects in jamovi, you can right click on these items (including the R syntax) and copy and paste them, for example into an R session. At present, the provided R syntax does not include the data import step and so this must be performed manually in R. There are many resources explaining how to import data into R and if you are interested we recommend you take a look at these; just search on the interweb. 
+In syntax mode analyses continue to operate as before but now they produce R syntax, and 'ascii output' like an R session. Like all results objects in jamovi, you can right click on these items (including the R syntax) and copy and paste them, for example into an R session. At present, the provided R syntax does not include the data import step and so this must be performed manually in R. There are many resources explaining how to import data into R and if you are interested we recommend you take a look at these; just search on the interweb. 
 
 ## Loading data in jamovi{#load}
 There are several different types of files that are likely to be relevant to us when doing data analysis. There are two in particular that are especially important from the perspective of this book:
 
 - *jamovi files* are those with a `.omv` file extension. This is the standard kind of file that jamovi uses to store data, and variables and analyses. 
-- Comma separated value (csv) files} are those with a `.csv` file extension. These are just regular old text files and they can be opened with many different software programs. It's quite typical for people to store data in csv files, precisely because they're so simple.
+- *Comma separated value (csv) files* are those with a `.csv` file extension. These are just regular old text files and they can be opened with many different software programs. It's quite typical for people to store data in csv files, precisely because they're so simple.
 
 There are also several other kinds of data file that you might want to import into jamovi. For instance, you might want to open Microsoft Excel spreadsheets `.xls` files), or data files that have been saved in the native file formats for other statistics software, such as SPSS or SAS.  Whichever file formats you are using, it's a good idea to create a folder or folders especially for your jamovi data sets and analyses and to make sure you keep these backed up regularly. 
 
 ### Importing data from csv files
-One quite commonly used data format is the humble "comma separated value" file, also called a csv file, and usually bearing the file extension `.csv`. csv files are just plain old-fashioned text files and what they store is basically just a table of data. This is illustrated in Figure \@ref(fig:booksalescsv), which shows a file called `booksales.csv` that I've created. As you can see, each row represents the book sales data for one month. The first row doesn't contain actual data though, it has the names of the variables.
+One quite commonly used data format is the humble "comma separated value" file, also called a csv file, and usually bearing the file extension `.csv`. csv files are just plain old-fashioned text files and what they store is basically just a table of data. This is illustrated in Figure \@ref(fig:booksalescsv), which shows a file called **`booksales.csv`** that I've created. As you can see, each row represents the book sales data for one month. The first row doesn't contain actual data though, it has the names of the variables.
 
 ```{r booksalescsv, fig.cap="The booksales.csv data file. On the left I’ve opened the file using a spreadsheet program (OpenOffice), which shows that the file is basically a table. On the right the same file is open in a standard text editor (the TextEdit program on a Mac), which shows how the file is formatted. The entries in the table are wrapped in quote marks and separated by commas.", echo=FALSE, fig.align="center", out.width="100%"}
 
@@ -127,7 +127,7 @@ knitr::include_graphics("img/mechanics/booksalescsv.jpg", error = TRUE)
 
 ```
 
-It's easy to open csv files in jamovi. From the top left menu (the button with three parallel lines) choose 'Open' and browse to where you have stored the csv file on your computer. If you're on a Mac, it'll look like the usual Finder window that you use to choose a file; on Windows it looks like an Explorer window. An example of what it looks like on a Mac is shown in Figure \ref(fig:fileopen). I'm assuming that you're familiar with your own computer, so you should have no problem finding the csv file that you want to import! Find the one you want, then click on the 'Open' button. 
+It's easy to open csv files in jamovi. From the top left menu (the button with three parallel lines) choose 'Open' and browse to where you have stored the csv file on your computer. If you're on a Mac, it'll look like the usual Finder window that you use to choose a file; on Windows it looks like an Explorer window. An example of what it looks like on a Mac is shown in Figure \@ref(fig:fileopen). I'm assuming that you're familiar with your own computer, so you should have no problem finding the csv file that you want to import! Find the one you want, then click on the 'Open' button. 
 
 
 ```{r fileopen, fig.cap="A dialog box on a Mac asking you to select the csv file jamovi should try to import. Mac users will recognise this immediately, it’s the usual way in which a Mac asks you to find a file. Windows users won’t see this, instead they’ll see the usual explorer window that Windows always gives you when it wants you to select a file.", echo=FALSE, fig.align="center", out.width="100%"}
@@ -138,10 +138,10 @@ knitr::include_graphics("img/mechanics/openscreen.png", error = TRUE)
 
 There are a few things that you can check to make sure that the data gets imported correctly: 
 
-- Heading. Does the first row of the file contain the names for each variable - a "header" row? The `booksales.csv` file has a header, so that's a yes.
+- Heading. Does the first row of the file contain the names for each variable - a "header" row? The **`booksales.csv`** file has a header, so that's a yes.
 - Separator. What character is used to separate different entries? In most csv files this will be a comma (it is "comma separated" after all).
 - Decimal. What character is used to specify the decimal point? In English speaking countries this is almost always a period (i.e., `.`). That's not universally true though, many European countries use a comma. 
-- Quote. What character is used to denote a block of text? That's usually going to be a double quote mark ". It is for the `booksales.csv` file.
+- Quote. What character is used to denote a block of text? That's usually going to be a double quote mark ". It is for the **`booksales.csv`** file.
 
 ## Importing unusual data files{#importing}
 Throughout this book I've assumed that your data are stored as a jamovi `.omv` file or as a "properly"' formatted csv file. However, in real life that's not a terribly plausible assumption to make so I'd better talk about some of the other possibilities that you might run into. 
@@ -150,14 +150,14 @@ Throughout this book I've assumed that your data are stored as a jamovi `.omv` f
 
 The first thing I should point out is that if your data are saved as a text file but aren't *quite* in the proper csv format then there's still a pretty good chance that jamovi will be able to open it. You just need to try it and see if it works. Sometimes though you will need to change some of the formatting. The ones that I've often found myself needing to change are:
 
-- `header`. A lot of the time when you're storing data as a csv file the first row actually contains the column names and not data. If that's not true then it's a good idea to open up the csv file in a spreadsheet programme such as Open Office and add the header row manually. 
-- `sep`. As the name "comma separated value" indicates, the values in a row of a csv file are usually separated by commas. This isn't universal, however. In Europe the decimal point is typically written as `,` instead of `.` and as a consequence it would be somewhat awkward to use `,` as the separator. Therefore it is not unusual to use `;` instead of `,` as the separator. At other times, I've seen a TAB character used. 
-- `quote`. It's conventional in csv files to include a quoting character for textual data. As you can see by looking at the `booksales.csv` file, this is usually a double quote character, `"`. But sometimes there is no quoting character at all, or you might see a single quote mark `'` used instead. 
-- `skip`. It's actually very common to receive CSV files in which the first few rows have nothing to do with the actual data. Instead, they provide a human readable summary of where the data came from, or maybe they include some technical info that doesn't relate to the data. 
-- `missing values`. Often you'll get given data with missing values. For one reason or another, some entries in the table are missing. The data file needs to include a "special" value to indicate that the entry is missing. By default jamovi assumes that this value is `99`^[You can change the default value for missing values in jamovi from the top right menu (three vertical dots), but this only works at the time of importing data files into jamovi. The default missing value in the dataset should not be a valid number associated with any of the variables, e.g. you could use `-9999` as this is unlikely to be a valid value.], for both numeric and text data, so you should make sure that, where necessary, all missing values in the csv file are replaced with `99` (or `-9999`; whichever you choose) before opening / importing the file into jamovi. Once you have opened / imported the file into jamovi all the missing values are converted to blank cells in the jamovi spreadsheet view.
+- **`header`**. A lot of the time when you're storing data as a csv file the first row actually contains the column names and not data. If that's not true then it's a good idea to open up the csv file in a spreadsheet programme such as Open Office and add the header row manually. 
+- **`sep`**. As the name "comma separated value" indicates, the values in a row of a csv file are usually separated by commas. This isn't universal, however. In Europe the decimal point is typically written as `,` instead of `.` and as a consequence it would be somewhat awkward to use `,` as the separator. Therefore it is not unusual to use `;` instead of `,` as the separator. At other times, I've seen a TAB character used. 
+- **`quote`**. It's conventional in csv files to include a quoting character for textual data. As you can see by looking at the **`booksales.csv`** file, this is usually a double quote character, `"`. But sometimes there is no quoting character at all, or you might see a single quote mark `'` used instead. 
+- **`skip`**. It's actually very common to receive CSV files in which the first few rows have nothing to do with the actual data. Instead, they provide a human readable summary of where the data came from, or maybe they include some technical info that doesn't relate to the data. 
+- **`missing values`**. Often you'll get given data with missing values. For one reason or another, some entries in the table are missing. The data file needs to include a "special" value to indicate that the entry is missing. By default jamovi assumes that this value is **`99`**^[You can change the default value for missing values in jamovi from the top right menu (three vertical dots), but this only works at the time of importing data files into jamovi. The default missing value in the dataset should not be a valid number associated with any of the variables, e.g. you could use **`-9999`** as this is unlikely to be a valid value.], for both numeric and text data, so you should make sure that, where necessary, all missing values in the csv file are replaced with **`99`** (or **`-9999`**; whichever you choose) before opening / importing the file into jamovi. Once you have opened / imported the file into jamovi all the missing values are converted to blank cells in the jamovi spreadsheet view.
 
 ### Loading data from SPSS (and other statistics packages)
-The commands listed above are the main ones we'll need for data files in this book. But in real life we have many more possibilities. For example, you might want to read data files in from other statistics programs. Since SPSS is probably the most widely used statistics package in psychology, it's worth mentioning that jamovi can also import SPSS data files (file extension `.sav`). Just follow the instructions above for how to open a csv file, but this time navigate to the .sav file you want to import. For SPSS files, jamovi will regard all values as missing if they are regarded as "system missing" files in SPSS. The 'Default missings' value does not seem to work as expected when importing SPSS files, so be aware of this - you might need another step: import the SPSS file into jamovi, then export as a csv file before re-opening in jamovi.^[I know this is a bot of a fudge, but it does work and hopefully this will be fixed in a later version of jamovi.].
+The commands listed above are the main ones we'll need for data files in this book. But in real life we have many more possibilities. For example, you might want to read data files in from other statistics programs. Since SPSS is probably the most widely used statistics package in psychology, it's worth mentioning that jamovi can also import SPSS data files (file extension `.sav`). Just follow the instructions above for how to open a csv file, but this time navigate to the .sav file you want to import. For SPSS files, jamovi will regard all values as missing if they are regarded as "system missing" files in SPSS. The 'Default missings' value does not seem to work as expected when importing SPSS files, so be aware of this - you might need another step: import the SPSS file into jamovi, then export as a csv file before re-opening in jamovi.^[I know this is a bit of a fudge, but it does work and hopefully this will be fixed in a later version of jamovi.].
 
 And that's pretty much it, at least as far as SPSS goes.  As far as other statistical software goes, jamovi can also directly open / import SAS and STATA files. 
 
@@ -165,9 +165,9 @@ And that's pretty much it, at least as far as SPSS goes.  As far as other statis
 A different problem is posed by Excel files. Despite years of yelling at people for sending data to me encoded in a proprietary data format, I get sent a lot of Excel files. The way to handle Excel files is to open them up first in Excel or another spreadsheet programme that can handle Excel files, and then export the data as a csv file before opening / importing the csv file into jamovi. 
 
 ## Changing data from one level to another{#coercion}
-Sometimes you want to change the variable level. This can happen for all sorts of reasons. Sometimes when you import data from files, it can come to you in the wrong format. Numbers sometimes get imported as nominal, text values. Dates may get imported as text. ParticipantID values can sometimes be read as continuous: nominal values can sometimes be read as ordinal or even continuous. There's a good chance that sometimes you'll want to convert a variable from one measurement level into another one. Or, to use the correct term, you want to ***coerce*** the variable from one class into another. 
+Sometimes you want to change the variable level. This can happen for all sorts of reasons. Sometimes when you import data from files, it can come to you in the wrong format. Numbers sometimes get imported as nominal, text values. Dates may get imported as text. ParticipantID values can sometimes be read as continuous: nominal values can sometimes be read as ordinal or even continuous. There's a good chance that sometimes you'll want to convert a variable from one measurement level into another one. Or, to use the correct term, you want to [**coerce**]{color="#F58231"} the variable from one class into another. 
 
-In \@ref(spreadsheet) we saw how to specify different variable levels, and if you want to change a variable's measurement level then you can do this in the jamovi data view for that variable. Just click the check box for the measurement level you want - continuous, ordinal, or nominal. 
+In Section \@ref(spreadsheet) we saw how to specify different variable levels, and if you want to change a variable's measurement level then you can do this in the jamovi data view for that variable. Just click the check box for the measurement level you want - continuous, ordinal, or nominal. 
 
 ## Installing add-on modules into jamovi {#jamovimodules}
 
