--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 --- 
 title: "Learning statistics with jamovi: a tutorial for psychology students and other beginners (Version 0.70)"
-author: "Danielle Navarro and David Foxcroft"
-date: "`r Sys.Date()`"
+author: ""
+date: ""
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [refs.bib]
@@ -12,6 +12,24 @@ output:
   bookdown::gitbook:
     pandoc_args: ["--lua-filter=color-text.lua"]
 ---
+
+# {-}
+<center>
+Danielle Navarro \
+University of New South Wales \
+d.navarro@unsw.edu.au \
+
+\
+and
+\
+
+David Foxcroft \
+Oxford Brookes University \
+david.foxcroft@brookes.ac.uk
+
+\
+http://www.learnstatswithjamovi.com
+</center>
 
 # Overview{-}
 
@@ -24,11 +42,14 @@ Navarro DJ and Foxcroft DR (2019). learning statistics with jamovi: a tutorial f
 This book is published under a Creative Commons BY-SA license (CC BY-SA) version 4.0. This means that this book can be reused, remixed, retained, revised and redistributed (including commercially) as long as appropriate credit is given to the authors. If you remix, or modify the original version of this open textbook, you must redistribute all versions of this open textbook under the same license - CC BY-SA. https://creativecommons.org/licenses/by-sa/4.0/
 
 # Dedication{-}
+
+<center>
 *This book was brought to you today by the letter ‘R’ and the word ‘jamovi’*
+</center>
 
 # Preface{-}
 
-## Preface to Version 0.70.1
+## Preface to Version 0.70.1{-}
 This is a minor update that makes just a few small but important changes. Specifically, 
 where possible the text has been updated to avoid misgendering/deadnaming Danielle Navarro. As this is a work in progress, there may be some places (e.g. associated datafiles) that do not reflect this change. I apologise for any confusion that this may cause.
 
@@ -40,7 +61,7 @@ Emily Kothe
 \
 November 3rd, 2021
 
-## Preface to Version 0.70
+## Preface to Version 0.70{-}
 This update from version 0.65 introduces some new analyses. In the ANOVA chapters we have added sections on repeated measures ANOVA and analysis of covariance (ANCOVA). In a new chapter we have introduced Factor Analysis and related techniques. Hopefully the style of this new material is consistent with the rest of the book, though eagle-eyed readers might spot a bit more of an emphasis on conceptual and practical explanations, and a bit less algebra. I'm not sure this is a good thing, and might add the algebra in a bit later. But it reflects both my approach to understanding and teaching statistics, and also some feedback I have received from students on a course I teach. In line with this, I have also been through the rest of the book and tried to separate out some of the algebra by putting it into a box or frame. It's not that this stuff is not important or useful, but for some students they may wish to skip over it and therefore the boxing of these parts should help some readers. 
 
 With this version I am very grateful to comments and feedback received from my students and colleagues, notably Wakefield Morys-Carter, and also to numerous people all over the world who have sent in small suggestions and corrections - much appreciated, and keep them coming! One pretty neat new feature is that the example data files for the book can now be loaded into jamovi as an add-on module - thanks to Jonathon Love for helping with that.
@@ -48,7 +69,7 @@ With this version I am very grateful to comments and feedback received from my s
 David Foxcroft 
 February 1st, 2019
 
-## Preface to Version 0.65
+## Preface to Version 0.65{-}
 In this adaptation of the excellent `Learning statistics with R', by Danielle Navarro, we have replaced the statistical software used for the analyses and examples with jamovi. Although R is a powerful statistical programming language, it is not the first choice for every instructor and student at the beginning of their statistical learning. Some instructors and students tend to prefer the point-and-click style of software, and that's where jamovi comes in. jamovi is software that aims to simplify two aspects of using R. It offers a point-and-click graphical user interface (GUI), and it also provides functions that combine the capabilities of many others, bringing a more SPSS- or SAS-like method of programming to R. Importantly, jamovi will always be free and open - that's one of its core values - because jamovi is made by the scientific community, for the scientific community.
 
 With this version I am very grateful for the help of others who have read through drafts and provided excellent suggestions and corrections, particularly Dr David Emery and Kirsty Walter.
@@ -56,7 +77,7 @@ With this version I am very grateful for the help of others who have read throug
 David Foxcroft 
 July 1st, 2018
 
-## Preface to Version 0.6
+## Preface to Version 0.6{-}
 The book hasn't changed much since 2015 when I released Version 0.5 -- it's probably fair to say that I've changed more than it has. I moved from Adelaide to Sydney in 2016 and my teaching profile at UNSW is different to what it was at Adelaide, and I haven't really had a chance to work on it since arriving here! It's a little strange looking back at this actually. A few quick comments...
 
 
@@ -70,14 +91,14 @@ Maybe someone would like to write a version that makes use of the **tidyverse**.
 Best,
 Danielle Navarro 
 
-## Preface to Version 0.5
+## Preface to Version 0.5{-}
 
 Another year, another update. This time around, the update has focused almost entirely on the theory sections of the book. Chapters 9, 10 and 11 have been rewritten, hopefully for the better. Along the same lines, Chapter 17 is entirely new, and focuses on Bayesian statistics. I think the changes have improved the book a great deal. I've always felt uncomfortable about the fact that all the inferential statistics in the book are presented from an orthodox perspective, even though I almost always present Bayesian data analyses in my own work. Now that I've managed to squeeze Bayesian methods into the book somewhere, I'm starting to feel better about the book as a whole. I wanted to get a few other things done in this update, but as usual I'm running into teaching deadlines, so the update has to go out the way it is!
 
 Danielle Navarro 
 February 16, 2015
 
-## Preface to Version 0.4
+## Preface to Version 0.4{-}
 
 A year has gone by since I wrote the last preface. The book has changed in a few important ways: Chapters 3 and 4 do a better job of documenting some of the time saving features of Rstudio, Chapters 12 and 13 now make use of new functions in the lsr package for running chi-square tests and t tests, and the discussion of correlations has been adapted to refer to the new functions in the lsr package. The soft copy of 0.4 now has better internal referencing (i.e., actual hyperlinks between sections), though that was introduced in 0.3.1. There's a few tweaks here and there, and many typo corrections (thank you to everyone who pointed out typos!), but overall 0.4 isn't massively different from 0.3. 
 
@@ -88,7 +109,7 @@ One thing that has surprised me is the number of downloads the book gets. I fina
 Danielle Navarro 
 February 4, 2014
 
-## Preface to Version 0.3
+## Preface to Version 0.3{-}
 
 There's a part of me that really **doesn't** want to publish this book. It's not finished.
 
